Add dedicated server build.
Add DS server build target and config default map for client.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Startup.Startup
+GameDefaultMap=/Game/Maps/DayOneEntry.DayOneEntry
 EditorStartupMap=/Game/Maps/Startup.Startup
+GlobalDefaultGameMode=/Game/Assets/Characters/Blueprints/BP_DefaultGameMode.BP_DefaultGameMode_C
+ServerDefaultMap=/Game/Maps/Startup.Startup
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
