Migrate project to source version.
Migrate project from install version to source version to build dedicated server.

--- a/DayOne.uproject
+++ b/DayOne.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "{7F8123D9-47E0-63C9-C87F-A19081D26B41}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
