Upgrade to UE 5.0.2
Upgrade project to the newest UE version.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/DayOneEntry.DayOneEntry
-EditorStartupMap=/Game/Maps/Startup.Startup
+GameDefaultMap=/Game/Maps/Home.Home
+EditorStartupMap=/Game/Maps/Home.Home
 GlobalDefaultGameMode=/Game/Assets/Characters/Blueprints/BP_DefaultGameMode.BP_DefaultGameMode_C
-ServerDefaultMap=/Game/Maps/Startup.Startup
+ServerDefaultMap=/Game/Maps/Lobby.Lobby
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
