add some new maps and game mode

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Maps/Home.Home
 EditorStartupMap=/Game/Maps/Home.Home
 GlobalDefaultGameMode=/Game/Assets/Characters/Blueprints/BP_DefaultGameMode.BP_DefaultGameMode_C
 ServerDefaultMap=/Game/Maps/Lobby.Lobby
+TransitionMap=/Game/Maps/SwatTmp/Transition.Transition
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
