add basic jump animation logic

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Home.Home
-EditorStartupMap=/Game/Maps/Home.Home
+GameDefaultMap=/Game/Maps/SwatTmp/Lobby.Lobby
+EditorStartupMap=/Game/Maps/SwatTmp/Lobby.Lobby
 GlobalDefaultGameMode=/Game/Assets/Characters/Blueprints/BP_DefaultGameMode.BP_DefaultGameMode_C
 ServerDefaultMap=/Game/Maps/Lobby.Lobby
 TransitionMap=/Game/Maps/SwatTmp/Transition.Transition
