update some networking configs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,3 +44,5 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+NetServerMaxTickRate=120
