re-build locomotion system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,3 +46,7 @@ ManualIPAddress=
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 NetServerMaxTickRate=120
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/DayOne.BaseCharacter.GaitState",NewName="/Script/DayOne.BaseCharacter.Gait")
++PropertyRedirects=(OldName="/Script/DayOne.BaseCharacter.StanceState",NewName="/Script/DayOne.BaseCharacter.Stance")
